Revert "Try to resolve N+1 issue by use join for fetch mode for person and pairing boards"
This reverts commit 6553514a

The query we end up with after the last commit isn't ideal. It may cause performance issues later.
For reference, here's the query that JPA come up with to fetch a project:

select
        project0_.id as id1_5_0_,
        project0_.name as name2_5_0_,
        project0_.password as password3_5_0_,
        pairingboa1_.project_id as project_4_1_1_,
        pairingboa1_.id as id1_1_1_,
        pairingboa1_.id as id1_1_2_,
        pairingboa1_.exempt as exempt2_1_2_,
        pairingboa1_.name as name3_1_2_,
        people2_.pairing_board_id as pairing_4_4_3_,
        people2_.id as id1_4_3_,
        people2_.id as id1_4_4_,
        people2_.name as name2_4_4_,
        people3_.project_id as project_3_4_5_,
        people3_.id as id1_4_5_,
        people3_.id as id1_4_6_,
        people3_.name as name2_4_6_
    from
        project project0_
    left outer join
        pairing_board pairingboa1_
            on project0_.id=pairingboa1_.project_id
    left outer join
        person people2_
            on pairingboa1_.id=people2_.pairing_board_id
    left outer join
        person people3_
            on project0_.id=people3_.project_id
    where
        project0_.id=?

This retrieves the Cartesian product of project, pairing board, and person table.
IF we run into performance issues in fetching project in the future, this answer from
Stack Overflow has a pretty good explanation on how to fix: https://stackoverflow.com/a/51055523/5811874