@@ -19,7 +19,10 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Optional;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.mockito.ArgumentMatchers.any;
@@ -47,10 +50,10 @@ public class RoleControllerTest extends BaseControllerTest {
 
     @Test
     public void addRole_createsARoleWithTheGivenName_andReturnsTheUpdatedProject() throws Exception {
-        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard.setId(2L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Collections.singletonList(existingPairingBoard), new ArrayList<>());
         existingProject.setId(1L);
 
         Role newRole = new Role("Ballers");
@@ -60,10 +63,10 @@ public class RoleControllerTest extends BaseControllerTest {
         when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(existingProject));
         when(mockProjectRepository.save(any(Project.class))).thenAnswer(i -> i.getArguments()[0]);
 
-        PairingBoard expectedPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), List.of(newRole));
+        PairingBoard expectedPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), Collections.singletonList(newRole));
         expectedPairingBoard.setId(2L);
 
-        Project expectedProject = new Project("Henry", "henrypass", Set.of(expectedPairingBoard), new HashSet<>());
+        Project expectedProject = new Project("Henry", "henrypass", Collections.singletonList(expectedPairingBoard), new ArrayList<>());
         expectedProject.setId(1L);
 
         ProjectDTO updatedProjectDTO = ProjectTransformer.transform(expectedProject);
@@ -119,10 +122,10 @@ public class RoleControllerTest extends BaseControllerTest {
 
     @Test
     public void addRole_whenNoPairingBoardMatchesGivenId_returnsError() throws Exception {
-        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard.setId(2L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Collections.singletonList(existingPairingBoard), new ArrayList<>());
         existingProject.setId(1L);
 
         Role newRole = new Role("Ballers");
@@ -146,13 +149,13 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard1.setId(2L);
 
-        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard2.setId(4L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard1, existingPairingBoard2), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Arrays.asList(existingPairingBoard1, existingPairingBoard2), new ArrayList<>());
         existingProject.setId(1L);
 
         RolePositionDTO rolePositionDTO = new RolePositionDTO();
@@ -164,13 +167,13 @@ public class RoleControllerTest extends BaseControllerTest {
         Role expectedRole = new Role("Ballers");
         expectedRole.setId(3L);
 
-        PairingBoard expectedPairingBoard1 = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard expectedPairingBoard1 = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>());
         expectedPairingBoard1.setId(2L);
 
-        PairingBoard expectedPairingBoard2 = new PairingBoard("Lame Kids", false, new HashSet<>(), new ArrayList<>(Set.of(expectedRole)));
+        PairingBoard expectedPairingBoard2 = new PairingBoard("Lame Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(expectedRole)));
         expectedPairingBoard2.setId(4L);
 
-        Project expectedProject = new Project("Henry", "henrypass", Set.of(expectedPairingBoard1, expectedPairingBoard2), new HashSet<>());
+        Project expectedProject = new Project("Henry", "henrypass", Arrays.asList(expectedPairingBoard1, expectedPairingBoard2), new ArrayList<>());
         expectedProject.setId(1L);
 
         ProjectDTO updatedProjectDTO = ProjectTransformer.transform(expectedProject);
@@ -190,13 +193,13 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard1.setId(2L);
 
-        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard2.setId(4L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard1, existingPairingBoard2), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Arrays.asList(existingPairingBoard1, existingPairingBoard2), new ArrayList<>());
         existingProject.setId(1L);
 
         RolePositionDTO rolePositionDTO = new RolePositionDTO();
@@ -215,13 +218,13 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard1.setId(2L);
 
-        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard2.setId(4L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard1, existingPairingBoard2), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Arrays.asList(existingPairingBoard1, existingPairingBoard2), new ArrayList<>());
         existingProject.setId(1L);
 
         RolePositionDTO rolePositionDTO = new RolePositionDTO();
@@ -244,13 +247,13 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard1.setId(2L);
 
-        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard2.setId(4L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard1, existingPairingBoard2), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Arrays.asList(existingPairingBoard1, existingPairingBoard2), new ArrayList<>());
         existingProject.setId(1L);
 
         RolePositionDTO rolePositionDTO = new RolePositionDTO();
@@ -273,13 +276,13 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard1 = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard1.setId(2L);
 
-        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard existingPairingBoard2 = new PairingBoard("Lame Kids", false, new ArrayList<>(), new ArrayList<>());
         existingPairingBoard2.setId(4L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard1, existingPairingBoard2), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Arrays.asList(existingPairingBoard1, existingPairingBoard2), new ArrayList<>());
         existingProject.setId(1L);
 
         RolePositionDTO rolePositionDTO = new RolePositionDTO();
@@ -302,19 +305,19 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard.setId(2L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Collections.singletonList(existingPairingBoard), new ArrayList<>());
         existingProject.setId(1L);
 
         when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(existingProject));
         when(mockProjectRepository.save(any(Project.class))).thenAnswer(i -> i.getArguments()[0]);
 
-        PairingBoard expectedPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>());
+        PairingBoard expectedPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>());
         expectedPairingBoard.setId(2L);
 
-        Project expectedProject = new Project("Henry", "henrypass", Set.of(expectedPairingBoard), new HashSet<>());
+        Project expectedProject = new Project("Henry", "henrypass", Collections.singletonList(expectedPairingBoard), new ArrayList<>());
         expectedProject.setId(1L);
 
         ProjectDTO updatedProjectDTO = ProjectTransformer.transform(expectedProject);
@@ -336,10 +339,10 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard.setId(2L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Collections.singletonList(existingPairingBoard), new ArrayList<>());
         existingProject.setId(1L);
 
         when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(existingProject));
@@ -357,10 +360,10 @@ public class RoleControllerTest extends BaseControllerTest {
         Role existingRole = new Role("Ballers");
         existingRole.setId(3L);
 
-        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new HashSet<>(), new ArrayList<>(Set.of(existingRole)));
+        PairingBoard existingPairingBoard = new PairingBoard("Cool Kids", false, new ArrayList<>(), new ArrayList<>(Collections.singletonList(existingRole)));
         existingPairingBoard.setId(2L);
 
-        Project existingProject = new Project("Henry", "henrypass", Set.of(existingPairingBoard), new HashSet<>());
+        Project existingProject = new Project("Henry", "henrypass", Collections.singletonList(existingPairingBoard), new ArrayList<>());
         existingProject.setId(1L);
 
         when(mockProjectRepository.findById(anyLong())).thenReturn(Optional.of(existingProject));
